fix: adicionando padronização de estilos das páginas de cdc e de orientações

--- a/cdc.html
+++ b/cdc.html
@@ -11,8 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main_styles.css">
     <!-- Fonts / Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -22,23 +21,23 @@
         href="https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Inter:wght@200;500;900&display=swap"
         rel="stylesheet">
     <!-- Primary Meta Tags -->
-    <title>PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro</title>
-    <meta name="title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
+    <title>PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil</title>
+    <meta name="title" content="CdC | Python Nordeste 2023 | Salvador - BA, Brasil">
     <meta name="description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
 
     <!-- Open Graph / Facebook Meta Tags -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://2023.pythonbrasil.org.br/">
-    <meta property="og:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
+    <meta property="og:url" content="https://2023.pythonnordeste.org.br/">
+    <meta property="og:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil">
     <meta property="og:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
     <meta property="og:image" content="img/miniatura_website.jpg">
 
     <!-- Twitter Meta Tags -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://2023.pythonbrasil.org.br/">
-    <meta property="twitter:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil | Em Setembro">
+    <meta property="twitter:url" content="https://2023.pythonnordeste.org.br/">
+    <meta property="twitter:title" content="PyNE23 | Python Nordeste 2023 | Salvador - BA, Brasil">
     <meta property="twitter:description"
         content="A edição da Python Nordeste multicultural e com sotaque soteropolitano. Da comunidade, para a comunidade.">
     <meta property="twitter:image" content="img/miniatura_website.jpg">
@@ -118,8 +117,8 @@
         </div>
     </header>
 
-    <section class="intro__wrapper" id="intro">
-        <div class="intro--descricao">
+    <section class="intro orientacoes" id="intro">
+        <div class="intro__wrapper">
             <h2 class="intro__headline">Código de Conduta da Python Nordeste</h2>
             <section class="intro__descritpion">
                 <p>
@@ -150,8 +149,11 @@
                 </p>
                 <p>
                     Se você se sentiu assediada(o), perseguida(o) ou humilhado(o), ou presenciou alguma destas atitudes,
-                    por favor entre em contato com a <a href="mailto:nordeste@python.org.br">Equipe de Resposta do
-                        Código de Conduta</a>.
+                    por favor entre em contato com através do Google Forms Equipe
+                    de Resposta do
+                    Código de Conduta<a
+                        href="https://docs.google.com/forms/d/e/1FAIpQLSd9dxi9uKUVPcLaheoWKvVdfbJxe2rqcU0z1F3h7Vb8CtvHxA/viewform">acessível
+                        neste link</a>.
                 </p>
                 <p>
                     Havendo um relato de violação destes princípios, a Equipe de Resposta realizará a devida análise e,
@@ -160,35 +162,44 @@
                     do evento por tempo indeterminado.
                 </p>
             </section>
-            <p class="footer__footnote">
+            <small>
                 O Código de Conduta acima foi baseado na versão desenvolvida pela Python Brasil & APyB (Associação
                 Python Brasil)
                 <a href="https://python.org.br/cdc/" class="padrao">
                     - Código de Conduta da Python Brasil
                 </a>
-            </p>
+            </small>
 
         </div>
     </section>
 
 
     <article class="sponsors-list">
-        <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
-        <h4>Ouro</h4>
-        <div class="sponsors-list__ouro">
+        <h3 class="sponsors-list__headline">Confira as nossas patrocinadoras e apoiadoras!</h3>
+        <h4 class="sponsors-list__heading--diamante">Diamante</h4>
+        <div class="sponsors-list--diamante">
+            <a href="https://www.instagram.com/cozinhadengodevo/" class="sponsors-flex"><img
+                    src="./img/assets/dengo_de_vo.png" alt="Dengo de Vó" /></a>
+            <a href="https://www.python.org/psf-landing/" class="sponsors-flex"><img src="./img/assets/psf-logo.png"
+                    alt="Python Software Foundation"></a>
+        </div>
+        <h4 class="sponsors-list__heading--ouro">Ouro</h4>
+        <div class="sponsors-list--ouro">
             <a href="https://www.botcity.dev/" class="sponsor-list"><img src="./img/assets/botcity.png"
                     alt="Botcity" /></a>
             <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
                     alt="Elastic" /></a>
         </div>
-        <h4>Bronze</h4>
-        <div class="sponsors-list__bronze">
+        <h4 class="sponsors-list__heading--bronze">Bronze</h4>
+        <div class="sponsors-list--bronze">
             <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png" alt="Globo" /></a>
             <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
                     alt="Vinta" /></a>
+            <a href="https://sobre.jusbrasil.com.br/" class="sponsor-list"><img
+                    src="./img/assets/jusbrasil_rescaled.png" alt="Jusbrasil" /></a>
         </div>
-        <div class="sponsors-list__apoiadores">
-            <h4>Apoiadores</h4>
+        <div class="sponsors-list--apoiadores">
+            <h4 class="sponsors-list__heading--apoiadores">Apoiadores</h4>
             <div class="sponsors-flex">
                 <a href="https://www.eng.ufba.br/" class="sponsors-flex"><img src="./img/assets/ufba.png"
                         alt="UFBA" /></a>
@@ -199,6 +210,8 @@
             </div>
         </div>
     </article>
+
+
     <article class="localizacao">
         <section class="localizacao--texto">
             <h2>Confira o local do evento</h2>
