--- a/orientacoes.html
+++ b/orientacoes.html
@@ -11,8 +11,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main_styles.css">
     <!-- Fonts / Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -144,22 +143,31 @@
     </section>
 
     <article class="sponsors-list">
-        <h3>Confira as nossas patrocinadoras e apoiadoras!</h3>
-        <h4>Ouro</h4>
-        <div class="sponsors-list__ouro">
+        <h3 class="sponsors-list__headline">Confira as nossas patrocinadoras e apoiadoras!</h3>
+        <h4 class="sponsors-list__heading--diamante">Diamante</h4>
+        <div class="sponsors-list--diamante">
+            <a href="https://www.instagram.com/cozinhadengodevo/" class="sponsors-flex"><img
+                    src="./img/assets/dengo_de_vo.png" alt="Dengo de Vó" /></a>
+            <a href="https://www.python.org/psf-landing/" class="sponsors-flex"><img src="./img/assets/psf-logo.png"
+                    alt="Python Software Foundation"></a>
+        </div>
+        <h4 class="sponsors-list__heading--ouro">Ouro</h4>
+        <div class="sponsors-list--ouro">
             <a href="https://www.botcity.dev/" class="sponsor-list"><img src="./img/assets/botcity.png"
                     alt="Botcity" /></a>
             <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
                     alt="Elastic" /></a>
         </div>
-        <h4>Bronze</h4>
-        <div class="sponsors-list__bronze">
+        <h4 class="sponsors-list__heading--bronze">Bronze</h4>
+        <div class="sponsors-list--bronze">
             <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png" alt="Globo" /></a>
             <a href="https://www.vinta.com.br/" class="sponsor-list"><img src="./img/assets/vinta.png"
                     alt="Vinta" /></a>
+            <a href="https://sobre.jusbrasil.com.br/" class="sponsor-list"><img
+                    src="./img/assets/jusbrasil_rescaled.png" alt="Jusbrasil" /></a>
         </div>
-        <div class="sponsors-list__apoiadores">
-            <h4>Apoiadores</h4>
+        <div class="sponsors-list--apoiadores">
+            <h4 class="sponsors-list__heading--apoiadores">Apoiadores</h4>
             <div class="sponsors-flex">
                 <a href="https://www.eng.ufba.br/" class="sponsors-flex"><img src="./img/assets/ufba.png"
                         alt="UFBA" /></a>
@@ -170,6 +178,8 @@
             </div>
         </div>
     </article>
+
+
     <article class="localizacao">
         <section class="localizacao--texto">
             <h2>Confira o local do evento</h2>
