feat: adicionando os cards dos keynotes

--- a/index.html
+++ b/index.html
@@ -199,35 +199,118 @@
                     </div>
                 </div>
             </div>
-            <div class="sponsor" id="sponsor">
-                <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
-                <div class="sponsor--section">
-                    <section lang="pt-br" class="sponsor-texto">
-                        <h3>Junte-se a nós para construir este evento!</h3>
-                        <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
-                        <section class="c4p">
-                            <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
-                                target="_blank" class="btn-c4p">
-                                Baixar o PDF
-                            </a>
-                        </section>
-                    </section>
 
-                    <section lang="en-us" class="sponsor-texto">
-                        <h3>Become a sponsor of Python Nordeste</h3>
-                        <p>Check out our Sponsorship Plan!</p>
-                        <section class="c4p">
-                            <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view"
-                                target="_blank" class="btn-c4p">
-                                Download PDF file
-                            </a>
-                        </section>
-                    </section>
+            <div class="keynote">
+                <h2>Keynotes</h2>
+
+                <div class="keynote__wrapper">
+                    <div class="keynote__card">
+                        <div class="keynote__header">
+                            <div class="keynote__avatar">
+                                <img class="keynote__avatar--img" src="./img/keynotes/anicely.jpg"
+                                    alt="foto de anicely santos">
+                            </div>
+                        </div>
+
+                        <div class="keynote__infos">
+                            <h3 class="keynote__name">Anicely Santos</h3>
+                            <p>Formanda em Análise e Desenvolvimento de Sistemas, pós graduanda em Ciências de Dados e
+                                Analytics. Trabalha na Escola de Dados, na Open Knowledge Brasil e faz parte do PyLadies
+                                Recife e do DiversiPy.</p>
+                            <section class="keynote__linkedin">
+                                <a href="https://www.linkedin.com/in/anicelysantos/" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="iconoir-link" /></i>
+                                </a>
+                            </section>
+
+                        </div>
+                    </div>
+
+                    <div class="keynote__card">
+                        <div class="keynote__header">
+                            <div class="keynote__avatar">
+                                <img class="keynote__avatar--img" src="./img/keynotes/matheus.jpg"
+                                    alt="foto de matheus moreira">
+                            </div>
+                        </div>
+
+                        <div class="keynote__infos">
+                            <h3 class="keynote__name">Matheus Moreira</h3>
+                            <p>Cientista de dados por profissão, pesquisador da Economia Política das Tecnologias de
+                                Informação e Comunicação e co-fundador do SoteroLab (não necessariamente nesta ordem).
+                            </p>
+                            <section class="keynote__linkedin">
+                                <a href="https://www.linkedin.com/in/moreira-matheus/" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="iconoir-link" /></i>
+                                </a>
+                            </section>
+
+                        </div>
+                    </div>
+
+                    <div class="keynote__card">
+                        <div class="keynote__header">
+                            <div class="keynote__avatar">
+                                <img class="keynote__avatar--img" src="./img/keynotes/tarcizio.jpg"
+                                    alt="foto de tarcizio silva">
+                            </div>
+                        </div>
+                        <div class="keynote__infos">
+                            <h3 class="keynote__name">Tarcízio Silva</h3>
+                            <p>Mestre em Comunicação (UFBA) e desenvolve tese sobre regulação antirracista de IA
+                                (UFABC). Senior Tech Policy Fellow na Fundação Mozilla. Autor e organizador de livros
+                                como “Racismo Algorítmico: inteligência artificial e discriminação nas redes digitais”
+                                (Edições Sesc, 2022) e “Comunidades, Algoritmos e Ativismos Digitais: olhares
+                                afrodiaspóricos” (LiteraRUA, 2020).
+                            </p>
+                            <section class="keynote__linkedin">
+                                <a href="https://www.linkedin.com/in/tarciziosilva/" target="_blank"
+                                    rel="noopener noreferrer">
+                                    <i class="iconoir-link" /></i>
+                                </a>
+                            </section>
+                        </div>
+                    </div>
                 </div>
             </div>
+        </div>
 
-            <article class="sponsors-list">
-                <h3 class="sponsors-list__headline">Confira as nossas patrocinadoras e apoiadoras!</h3>
+
+        <div class="sponsor" id="sponsor">
+            <h2>Seja uma empresa patrocinadora da Python Nordeste</h2>
+            <div class="sponsor--section">
+                <section lang="pt-br" class="sponsor-texto">
+                    <h3>Junte-se a nós para construir este evento!</h3>
+                    <p>Não deixe de conferir o nosso Plano de Patrocínio!</p>
+                    <section class="c4p">
+                        <a href="https://drive.google.com/file/d/1mpw3NoA-tizdEWYbKxWLciw9cm0TgZ9X/view?usp=share_link"
+                            target="_blank" class="btn-c4p">
+                            Baixar o PDF
+                        </a>
+                    </section>
+                </section>
+
+                <section lang="en-us" class="sponsor-texto">
+                    <h3>Become a sponsor of Python Nordeste</h3>
+                    <p>Check out our Sponsorship Plan!</p>
+                    <section class="c4p">
+                        <a href="https://drive.google.com/file/d/17qei9Stdsef0Sxz8pZvYFZD6JmY85gKN/view" target="_blank"
+                            class="btn-c4p">
+                            Download PDF file
+                        </a>
+                    </section>
+                </section>
+            </div>
+        </div>
+
+
+        <article class="sponsors-list">
+            <h3 class="sponsors-list__headline">Confira as nossas patrocinadoras e apoiadoras!</h3>
+
+            <section class="sponsors-list__block">
+
                 <h4 class="sponsors-list__heading--diamante">Diamante</h4>
                 <div class="sponsors-list--diamante">
                     <a href="https://www.instagram.com/cozinhadengodevo/" class="sponsors-flex"><img
@@ -235,6 +318,9 @@
                     <a href="https://www.python.org/psf-landing/" class="sponsors-flex"><img
                             src="./img/assets/psf-logo.png" alt="Python Software Foundation"></a>
                 </div>
+            </section>
+            <section class="sponsors-list__block">
+
                 <h4 class="sponsors-list__heading--ouro">Ouro</h4>
                 <div class="sponsors-list--ouro">
                     <a href="https://www.botcity.dev/" class="sponsor-list"><img src="./img/assets/botcity.png"
@@ -242,6 +328,10 @@
                     <a href="https://www.elastic.co/pt/about" class="sponsor-list"><img src="./img/assets/elastic.png"
                             alt="Elastic" /></a>
                 </div>
+            </section>
+
+            <section class="sponsors-list__block">
+
                 <h4 class="sponsors-list__heading--bronze">Bronze</h4>
                 <div class="sponsors-list--bronze">
                     <a href="https://www.globo.com/" class="sponsor-list"><img src="./img/assets/globo.png"
@@ -251,6 +341,9 @@
                     <a href="https://sobre.jusbrasil.com.br/" class="sponsor-list"><img
                             src="./img/assets/jusbrasil_rescaled.png" alt="Jusbrasil" /></a>
                 </div>
+            </section>
+            <section class="sponsors-list__block">
+
                 <div class="sponsors-list--apoiadores">
                     <h4 class="sponsors-list__heading--apoiadores">Apoiadores</h4>
                     <div class="sponsors-flex">
@@ -261,58 +354,57 @@
                         <a href="https://gamma-ufba.github.io/index.html" class="sponsors-flex"><img
                                 src="./img/assets/gamma-ufba.png" alt="GAMMA"></a>
                     </div>
-                </div>
-            </article>
-            <article class="localizacao">
-                <section class="localizacao--texto">
-                    <h2>Confira o local do evento</h2>
-                    <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) -
-                        Salvador
-                    </p>
-                    <br>
-                    <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
-                </section>
-                <iframe
-                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
-                    width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
-                    allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-            </article>
-            <footer>
-                <div class="footer__social">
+            </section>
+        </article>
+        <article class="localizacao">
+            <section class="localizacao--texto">
+                <h2>Confira o local do evento</h2>
+                <p>A PyNE 2023 será sediada na Escola Politécnica da UFBA <br>(Universidade Federal da Bahia) -
+                    Salvador
+                </p>
+                <br>
+                <p>R. Prof. Aristídes Novis, 2 - Federação, Salvador - BA, 40210-630</p>
+            </section>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3887.56535363496!2d-38.512876424041686!3d-12.999628560375259!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x716049dd45f3533%3A0x6e449a7096d9e5e0!2sEscola%20Polit%C3%A9cnica%20da%20UFBA!5e0!3m2!1spt-BR!2sbr!4v1685062528945!5m2!1spt-BR!2sbr"
+                width="400" height="300" style=" border: 10px double #f7931e; outline: 10px double #299BA6;"
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+        </article>
+        <footer>
+            <div class="footer__social">
 
-                    <div class="social-media" id="social-media">
-                        <div class="social-media__list">
-                            <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
-                                <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
-                                <!-- nordeste@python.org.br -->
-                            </a>
-                            <a href="https://www.instagram.com/pythonnordeste/" target="_blank"
-                                rel="noopener noreferrer">
-                                <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
-                            </a>
-                            <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
-                                <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
-                            </a>
-                            <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
-                                rel="noopener noreferrer">
-                                <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
-                            </a>
+                <div class="social-media" id="social-media">
+                    <div class="social-media__list">
+                        <a href="mailto:nordeste@python.org.br" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/EMAIL.svg" alt="Email" />
+                            <!-- nordeste@python.org.br -->
+                        </a>
+                        <a href="https://www.instagram.com/pythonnordeste/" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/INSTAGRAM.svg" alt="Instagram" />
+                        </a>
+                        <a href="https://twitter.com/pythonnordeste" target="_blank" rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/TWITTER.svg" alt="Twitter" />
+                        </a>
+                        <a href="https://www.linkedin.com/company/python-nordeste-2022/" target="_blank"
+                            rel="noopener noreferrer">
+                            <img class="social-media--icons" src="./img/icons/LINKEDIN.svg" alt="Linkedin" />
+                        </a>
 
-                        </div>
-                        <div class="footer__footnote">
-                            <a class="footer__footnote" href="mailto:nordeste@python.org.br">
-                                <p>nordeste@python.org.br</p>
-                            </a>
-                            <hr>
-                            <small class="footer__note">
-                                22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 por pythonistas
-                                    nordestinos </small>
-                        </div>
+                    </div>
+                    <div class="footer__footnote">
+                        <a class="footer__footnote" href="mailto:nordeste@python.org.br">
+                            <p>nordeste@python.org.br</p>
+                        </a>
+                        <hr>
+                        <small class="footer__note">
+                            22 a 24 de setembro de 2023 | Salvador - BA, Brasil | Feito com <3 por pythonistas
+                                nordestinos </small>
                     </div>
                 </div>
-            </footer>
-            <script src="https://unpkg.com/htmlincludejs"></script>
-            <script src="script.js"></script>
+            </div>
+        </footer>
+        <script src="https://unpkg.com/htmlincludejs"></script>
+        <script src="script.js"></script>
 
 </body>
 
