feat: add info sobre as doacoes de alimentos

--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
             <li class="menu-item"><a href="#sponsor">Como patrocinar</a></li>
             <li class="menu-item"><a href="cdc.html" target="_blank" rel="noopener noreferrer">Código de conduta</a>
             </li>
+            <li class="menu-item"><a href="#doacoes" target="_blank" rel="noopener noreferrer">Doações arrecadadas</a>
+            </li>
             <li class="menu-item"><a href="#social-media">Redes sociais</a></li>
             <li class="menu-item"><a href="orientacoes.html" rel="noopener noreferrer">Orientações para a Covid-19</a>
             </li>
@@ -356,6 +358,17 @@
                     </div>
             </section>
         </article>
+
+        <section class="doacoes" id="doacoes">
+            <h3>Agradecemos pelas doações de alimentos não perecíveis</h3>
+            <p>A comunidade Python Nordeste acredita e se compromete com o princípio da solidariedade e por esta razão,
+                conseguimos arrecadar cerca de <strong>105 kg</strong> de alimentos não perecíveis,
+                que foram doados para a
+                entidade <a href="https://www.instagram.com/lar_recanto/">Lar
+                    Recanto dos Idosos</a> em Salvador.</p>
+
+        </section>
+
         <article class="localizacao">
             <section class="localizacao--texto">
                 <h2>Confira o local do evento</h2>
